Fixed: Text alignment forcing everything to the left with a small amount of padding

--- a/site-sass/brennan/slider-styling.scss
+++ b/site-sass/brennan/slider-styling.scss
@@ -41,10 +41,9 @@
     position: absolute;
 
     .readmore {
-      width: 30%;
-      margin: 0 auto;
-      padding: 10px;
-	  line-height: 30px;
+      padding: 10px 5%;
+	    line-height: 30px;
+      float: left;
 
       p {
         color: #fff;
@@ -122,6 +121,15 @@ li.slick-active button{
     z-index: -1;
   }
 
+}
+
+.esc {
+  padding: 0 5%;
+  text-align: left;
+}
+
+.brighter a {
+  text-align: left;
 }
 
 .overlay-slide > .item-text{
